--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -32,15 +32,21 @@ footer {
   min-height      : 20vh;
 }
 
+main {
+  z-index: 1
+}
+
 header {
-  display        : flex !important;
-  flex-direction : row;
-  height         : 10vh;
-  position       : fixed;
-  justify-content: space-between;
-  z-index        : 20;
-  width          : 100%;
-  background     : linear-gradient(0deg,
+  display            : flex !important;
+  //visibility       : hidden;
+  opacity            : 0;
+  flex-direction     : row;
+  height             : 10vh;
+  position           : fixed;
+  justify-content    : space-between;
+  //z-index        : 20;
+  width              : 100%;
+  background         : linear-gradient(0deg,
       rgba($gray, 0) 0%,
       // rgba($gray, 0.6250875350140056) 20%,
       // rgba($gray, 0.742734593837535) 37%,
@@ -287,7 +293,7 @@ div {
 }
 
 .hero-kontakt {
-  bottom   : 5vh;
+  bottom   : 0;
   right    : 2vw;
   z-index  : 100;
   position : fixed;
@@ -346,6 +352,7 @@ div {
     //width: 80%;
     height : 60vh;
     padding: 2vh 2vw;
+    z-index: -2;
 
     .cls-1 {
       fill: #383838;
@@ -454,6 +461,7 @@ div {
   .vertical-scroll-container {
     overflow: hidden;
     width   : 100%;
+    position: relative;
   }
 
   .card {
@@ -535,15 +543,6 @@ div {
       display        : flex;
       justify-content: center;
 
-      i {
-        color                  : $middle-blue;
-        -webkit-background-clip: text;
-        font-weight            : 900;
-        font-size              : 3em;
-        background-image       : linear-gradient($light-blue, $dark-blue);
-        -webkit-text-fill-color: transparent;
-      }
-
 
       #services-svg {
         visibility: hidden;
@@ -560,10 +559,19 @@ div {
   }
 
 
+  .details-close {
+    position: absolute;
+    right   : 1vw;
+    top     : 1vh;
+    z-index : 6666;
+    display : block;
 
+  }
 
 
   .services {
+    position: relative;
+
 
     &.moreContent {
       display       : flex;
@@ -584,30 +592,43 @@ div {
     align-items   : center;
     font-size     : clamp(16px, 2vw, 20px);
 
+    .icon {
+      i {
+        color                  : $middle-blue;
+        -webkit-background-clip: text;
+        font-weight            : 900;
+        font-size              : 3em;
+        background-image       : linear-gradient($light-blue, $dark-blue);
+        -webkit-text-fill-color: transparent;
+      }
+    }
 
+
+
+
+    .more {
+      display: none;
+    }
   }
 
-
+  .clickable {
+    color           : var(--highlight) !important;
+    background-image: none;
+    font-size       : 35px;
+    font-size       : 1.5em;
+    font-weight     : 600;
+    cursor          : pointer;
+    z-index         : 999999;
+  }
 
   .more {
     z-index: 800000;
 
-    cursor         : pointer;
-    border-radius  : 50%;
-    background     : #1d71b8;
-    height         : 14vh;
-    width          : 14vh;
-    color          : #2c2c2c;
-    position       : fixed;
-    bottom         : 30vh;
-    right          : 0;
-    display        : flex;
-    justify-content: center;
-    align-items    : center;
-    flex-direction : column;
-    font-size      : 0.7em;
-    font-weight    : 800;
-    display        : none;
+    cursor   : pointer;
+    position : absolute;
+    bottom   : 5%;
+    right    : 20%;
+    font-size: 0.8em;
   }
 }
 
