--- a/styles/card.css
+++ b/styles/card.css
@@ -82,28 +82,50 @@
       align-self: center;
 }
 
+#services .tiles .details-close {
+  display: none;
+}
+
+#services .tiles .more {
+  display: block;
+}
+
 #services .tiles .services {
   width: 70%;
-  height: 70vh;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   gap: 2vw;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  margin-left: 0;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0 10vw;
+  margin-top: 4vh;
 }
 
 #services .tiles .services .card {
-  width: 25vh;
-  height: 25vh;
+  width: 20vh;
+  height: 20vh;
   margin: 0;
   padding: 0;
+  cursor: pointer;
 }
 
-#services .tiles .services .title,
+#services .tiles .services .card .title-container {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 0;
+  padding: 3vh 1vw;
+  text-align: center;
+}
+
+#services .tiles .services .card .title-container::before {
+  display: none;
+}
+
 #services .tiles .services .extended-content {
   display: none;
 }
