--- a/styles/card.scss
+++ b/styles/card.scss
@@ -48,18 +48,19 @@ $font       : white;
 }
 
 .card {
-    border-radius   : 50px;
-    margin          : 6vh 3vw;
-    padding         : 6vh 3vw;
-    display         : flex;
-    flex-direction  : column;
-    align-items     : center;
-    max-height      : 60vh;
-    width           : clamp(100px, 90vw, 800px);
+    border-radius      : 50px;
+    margin             : 6vh 3vw;
+    padding            : 6vh 3vw;
+    display            : flex;
+    flex-direction     : column;
+    align-items        : center;
+    max-height         : 60vh;
+    width              : clamp(100px, 90vw, 800px);
     //min-height    : 75vh;
-    position        : relative;
-    overflow        : hidden;
-    margin-right    : 10vw;
+    position           : relative;
+    overflow           : hidden;
+    margin-right       : 10vw;
+    // z-index         : 5;
 
     @media screen and (min-width: 1200px) {
         width : 800px;
@@ -78,34 +79,59 @@ $font       : white;
 }
 
 #services .tiles {
+
+
+
     //border  : 1px solid green;
     //width : 50%;
+    .details-close {
+        display: none;
+    }
+
+    .more {
+        display: block;
+    }
 
     .services {
 
         //  border                  : 1px solid yellow;
-        width                   : 70%;
-        height                  : 70vh;
+        width                     : 70%;
+        //height                  : 70vh;
         // display              : grid;
         // grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
         // grid-template-rows   : masonry;
         // margin               : 0;
-        flex-wrap               : wrap;
-        gap                     : 2vw;
-        align-items             : center;
-        justify-content         : center;
+        flex-wrap                 : wrap;
+        gap                       : 2vw;
+        margin-left               : 0;
+        width                     : 100%;
+        justify-content           : space-between;
+        padding                   : 0 10vw;
+        margin-top                : 4vh;
 
         .card {
             //flex      : 1;
-            width    : 25vh;
-            height   : 25vh;
-            margin   : 0;
-            padding  : 0;
+            width  : 20vh;
+            height : 20vh;
+            margin : 0;
+            padding: 0;
+            cursor : pointer;
+
             // width : unset;
             // width : unset;
+            .title-container {
+                flex-direction: column;
+                margin-bottom : 0;
+                padding       : 3vh 1vw;
+                text-align    : center;
+
+            }
+
+            .title-container::before {
+                display: none;
+            }
         }
 
-        .title,
         .extended-content {
             display: none;
         }
