--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,10 +20,15 @@ footer {
   min-height: 20vh;
 }
 
+main {
+  z-index: 1;
+}
+
 header {
   display: -webkit-box !important;
   display: -ms-flexbox !important;
   display: flex !important;
+  opacity: 0;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -33,7 +38,6 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  z-index: 20;
   width: 100%;
   background: -webkit-gradient(linear, left bottom, left top, from(rgba(44, 44, 44, 0)), to(#2c2c2c));
   background: linear-gradient(0deg, rgba(44, 44, 44, 0) 0%, #2c2c2c 100%);
@@ -248,7 +252,7 @@ div {
 }
 
 .hero-kontakt {
-  bottom: 5vh;
+  bottom: 0;
   right: 2vw;
   z-index: 100;
   position: fixed;
@@ -308,6 +312,7 @@ div {
           animation: bg-animation 70s infinite;
   height: 60vh;
   padding: 2vh 2vw;
+  z-index: -2;
 }
 
 .hero .responsive svg {
@@ -430,6 +435,7 @@ div {
 .service-container .vertical-scroll-container {
   overflow: hidden;
   width: 100%;
+  position: relative;
 }
 
 .service-container .card .title-container::before {
@@ -510,16 +516,6 @@ div {
           justify-content: center;
 }
 
-.service-container .card .icon i {
-  color: #1d71b8;
-  -webkit-background-clip: text;
-  font-weight: 900;
-  font-size: 3em;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#36a9e1), to(#006494));
-  background-image: linear-gradient(#36a9e1, #006494);
-  -webkit-text-fill-color: transparent;
-}
-
 .service-container .card .icon #services-svg {
   visibility: hidden;
 }
@@ -532,7 +528,16 @@ div {
   height: 70%;
 }
 
+.service-container .details-close {
+  position: absolute;
+  right: 1vw;
+  top: 1vh;
+  z-index: 6666;
+  display: block;
+}
+
 .service-container .services {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -568,33 +573,37 @@ div {
   }
 }
 
+.service-container .services .icon i {
+  color: #1d71b8;
+  -webkit-background-clip: text;
+  font-weight: 900;
+  font-size: 3em;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#36a9e1), to(#006494));
+  background-image: linear-gradient(#36a9e1, #006494);
+  -webkit-text-fill-color: transparent;
+}
+
+.service-container .services .more {
+  display: none;
+}
+
+.service-container .clickable {
+  color: var(--highlight) !important;
+  background-image: none;
+  font-size: 35px;
+  font-size: 1.5em;
+  font-weight: 600;
+  cursor: pointer;
+  z-index: 999999;
+}
+
 .service-container .more {
   z-index: 800000;
   cursor: pointer;
-  border-radius: 50%;
-  background: #1d71b8;
-  height: 14vh;
-  width: 14vh;
-  color: #2c2c2c;
-  position: fixed;
-  bottom: 30vh;
-  right: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  font-size: 0.7em;
-  font-weight: 800;
-  display: none;
+  position: absolute;
+  bottom: 5%;
+  right: 20%;
+  font-size: 0.8em;
 }
 
 .moving-background {
